--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,9 +13,9 @@
 				<nav class="top-bar" data-topbar>
 					<ul class="title-area">
 						<li class="name">
-							<h1><a href="">CAII</a></h1>
+							<h1><a href="http://caii.itmexicali.edu.mx">CAII</a></h1>
 						</li>
-						<li class="toggle-topbar menu-icon"><a href="#">CAII</a></li>
+						<li class="toggle-topbar menu-icon"><a href="http://caii.itmexicali.edu.mx">CAII</a></li>
 					</ul>
 					<section class="top-bar-section">
 						<ul class="left">
