--- a/src/PersonalPage/ProyectosBundle/Resources/views/Default/Areas.html.twig
+++ b/src/PersonalPage/ProyectosBundle/Resources/views/Default/Areas.html.twig
@@ -22,7 +22,11 @@
 	{% if miembro['link'] == '' %}
 		Recurso no encontrado o inexistente
 	{% endif %}
+	<div style="margin-top: 15px;margin-left: 10px;margin-right: 10px">
+	<p margin="15px">
 	<span>{{miembro['descripcion']}}</span><br><br>
+	</p>
+	</div>
 </div>
 
 {% endblock %}
