--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,8 +8,9 @@
     </head>
 
     <body>
-    	<div class="fondo">
-	    	<div class="fixed" >
+    	<div class="fondo" >
+    		<div class="row">
+	    	<div class="contain-to-grid" >
 				<nav class="top-bar" data-topbar>
 					<ul class="title-area">
 						<li class="name">
@@ -23,9 +24,10 @@
 						</ul>
 					</section>
 					<section class="right">
-						{% block selector %}{% endblock %}
+						{% block selector %}{% endblock %} 
 					</section>
 				</nav>
+			</div>
 			</div>
 			<div style="background: white;">
 				<div class="row" style="background: white;"><br/><br/></div>
@@ -43,7 +45,7 @@
 				<hr>
 				<div class="row" >
 					<div class="small-3 columns">
-						{#<!-- <img src="{{ asset(miembro.fotoURL) }}" height="180" width="110"> -->#}
+						{# <img src="{{ asset(miembro.fotoURL) }}" height="180" width="110"> #}
 						{% block Imagen %}{% endblock %}
 					</div>
 					<div class="small-9 columns">
