--- a/src/PersonalPage/ProyectosBundle/Resources/views/Default/Areas.html.twig
+++ b/src/PersonalPage/ProyectosBundle/Resources/views/Default/Areas.html.twig
@@ -10,7 +10,7 @@
 			{% if locale == 'es' %}
 			<a href="{{ path('areas', { '_locale': 'en', 'id': miembro['link'] }) }}"><img src="{{ asset('us.jpg') }}" height="40" width="40" >  </a>
 			{% elseif locale == 'en' %}
-			<a href="{{ path('areas', { '_locale': 'es', 'id': miembro['link'] }) }}"><img src="{{ asset('es.jpg') }}" height="40" width="40" >  </a>
+			<a href="{{ path('areas', { '_locale': 'es', 'id': miembro['link'] }) }}"><img src="{{ asset('esp.jpg') }}" height="40" width="40" >  </a>
 			{% endif %}
 		</footer>
 {% endblock %}
