--- a/src/PersonalPage/ProyectosBundle/Resources/views/Default/Proyectos.html.twig
+++ b/src/PersonalPage/ProyectosBundle/Resources/views/Default/Proyectos.html.twig
@@ -50,6 +50,6 @@
 	{% if locale == 'es' %}
 	<a href="{{ path('proyectos', { '_locale': 'en', 'id': miembro['link'] }) }}"><img src="{{ asset('us.jpg') }}" height="40" width="40" > </a>
 	{% elseif locale == 'en' %}
-	<a href="{{ path('proyectos', { '_locale': 'es', 'id': miembro['link'] }) }}"><img src="{{ asset('es.jpg') }}" height="40" width="40" ></a>
+	<a href="{{ path('proyectos', { '_locale': 'es', 'id': miembro['link'] }) }}"><img src="{{ asset('esp.jpg') }}" height="40" width="40" ></a>
 	{% endif %}
 {% endblock %}
