--- a/src/PersonalPage/ProyectosBundle/Resources/views/Default/Publicaciones.html.twig
+++ b/src/PersonalPage/ProyectosBundle/Resources/views/Default/Publicaciones.html.twig
@@ -70,7 +70,7 @@
 			{% if locale == 'es' %}
 			<a href="{{ path('publicaciones', { '_locale': 'en', 'id': miembro['link'] }) }}"><img src="{{ asset('us.jpg') }}" height="40" width="40" > </a>
 			{% elseif locale == 'en' %}
-			<a href="{{ path('publicaciones', { '_locale': 'es', 'id': miembro['link'] }) }}"><img src="{{ asset('es.jpg') }}" height="40" width="40" ></a>
+			<a href="{{ path('publicaciones', { '_locale': 'es', 'id': miembro['link'] }) }}"><img src="{{ asset('esp.jpg') }}" height="40" width="40" ></a>
 			{% endif %}
 		</footer>
 {% endblock %}
